monitoring/grafana.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  tls:
  - hosts:
    - grafana.ajphome.com
    secretName: grafana-tls
  rules:
  - host: grafana.ajphome.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
