monitoring/grafana.ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`grafana.ajphome.com`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
