monitoring/prometheus.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
spec:
  tls:
  - hosts:
    - prometheus.ajphome.com
    secretName: prometheus-tls
  rules:
  - host: prometheus.ajphome.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
