monitoring/prometheus.ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prometheus.ajphome.com`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-prometheus
      port: 9090
  tls:
    secretName: prometheus-tls
